@@ -18,4 +18,7 @@
 # under the License.
 #
 
+export PULSAR_MEM="${PULSAR_MEM:-"-Xmx512M -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/var/log/pulsar -XX:+ExitOnOutOfMemoryError"}"
+export PULSAR_GC="${PULSAR_GC:-"-XX:+UseZGC"}"
+
 bin/pulsar standalone
